# administrate-me-now

./: .gitignore  00-preflight.md  00.5-mirror-docs.md  02-repo-scaffold.md  03-event-log-bus.md  04-event-schemas.md  05-projections-core.md  06-projections-domain.md  07-projections-ops.md  08-session-scope-governance.md  09a-skill-runner.md  09b-first-skill-pack.md  10a-pipeline-runner.md  10c-proactive-pipelines.md  11-standalone-adapters.md  12-openclaw-plugin-adapters.md  13a-product-apis-core-comms.md  13b-product-apis-capture-auto.md  14a-console-framework.md  14b-console-views-primary.md  14c-console-views-secondary.md  14d-console-reward-observation.md  15-openclaw-integration.md  16-bootstrap-wizard.md  17-cli-deploy-migrations.md  ADMINISTRATEME_BUILD.md  ADMINISTRATEME_CONSOLE_PATTERNS.md  ADMINISTRATEME_CONSOLE_REFERENCE.html  ADMINISTRATEME_DIAGRAMS.md  ADMINISTRATEME_FIELD_MANUAL.md  ADMINISTRATEME_REFERENCE_EXAMPLES.md  PROMPT_SEQUENCE.md  README.md  d01-tests-pass-isolated-fail-integration.md  d02-openclaw-invocation-shape-mismatch.md  d04-migration-failed-partial-state.md  d05-skill-nonsense-output.md  d06-observation-not-suppressing.md  d07-event-log-slow-query.md  d08-xlsx-spurious-events.md  (+1 more)
bootstrap/: pack_install_order.yaml
console/: package-lock.json  package.json  server.js
docs/: 00-mental-model.md  01-split-memo-10b.md  02-split-memo-10b-ii.md  03-split-memo-10c.md  04-architecture-amendment-knowledge-vaults-and-member-bridges.md  05-architecture-amendment-personal-data-layer.md  2026-04-25-prompt-08-split.md  DECISIONS.md  SYSTEM_INVARIANTS.md  architecture-summary.md  build_log.md  openclaw-cheatsheet.md  partner_handoff.md  preflight-report.md  qc_rubric.md  universal_preamble_extension.md
packs/: README.md
prompts/: 00-preflight.md  00.5-mirror-docs.md  01-read-artifacts.md  01b-system-invariants.md  02-repo-scaffold.md  03-event-log-bus.md  03.5-decisions-backfill.md  04-event-schemas.md  05-projections-core.md  06-projections-domain.md  07-projections-ops.md  07.5-checkpoint-projection-consistency.md  07a-projections-ops-spine.md  07b-xlsx-workbooks-forward.md  07c-alpha-foundations.md  07c-beta-daemon.md  07c-xlsx-workbooks-reverse.md  08-session-scope-governance.md  08a-session-and-scope.md  08b-governance-and-observation.md  09a-skill-runner.md  09b-first-skill-pack.md  10a-pipeline-runner.md  10b-i-identity-and-noise.md  10b-ii-alpha-commitment-extraction.md  10b-ii-beta-thank-you-detection.md  10b-reactive-pipelines.md  10c-proactive-pipelines.md  (+26 more)
(+1164 files in other folders)
